Reseteo de CSS3 y se agrega Bootstrap 4.3.1

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-<html>
-  <head>
-    <title></title>
-    <meta content="">
-    <style></style>
-  </head>
-  <body></body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Título de la página</title>
+
+  <link rel="stylesheet" href="css/bootstrap.min.css"> <!-- Bootstrap 4.3.1 -->
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
+<body>
+  
+  <script src="js/jquery-3.3.1.slim.min.js"></script>
+  <script src="js/popper.min.js"></script> <!-- Versión 1.14.7 -->
+  <script src="js/bootstrap.min.js"></script> <!-- Versión 4.3.1 -->
+</body>
 </html>
