Agregados: AnimateCSS, HoverCSS, BootstrapValidator, SmoothScroll y Waypoints

--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
   <title>Título de la página</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css"> <!-- Bootstrap 4.3.1 -->
+  <link rel="stylesheet" href="css/hover-min.css"> <!-- Versión 2.3.2 -->
+  <link rel="stylesheet" href="css/animate.css"> <!-- Version - 3.7.2 -->
   <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
+  <h1>Hola Mundo</h1>
+  <h2>Plantilla Base 1.0</h2>
   
   <script src="js/jquery-3.3.1.slim.min.js"></script>
   <script src="js/popper.min.js"></script> <!-- Versión 1.14.7 -->
   <script src="js/bootstrap.min.js"></script> <!-- Versión 4.3.1 -->
+  <script src="js/bootstrapValidator.js"></script> <!-- Versión 0.5.0 -->
+  <script src="js/smooth-scroll.js"></script> 
+  <script src="js/waypoints.min.js"></script> <!-- Versión 2.0.5 -->
+  <script src="js/main.js"></script>
+
 </body>
 </html>
