--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Título de la página</title>
 
-  <link rel="stylesheet" href="css/bootstrap.min.css"> <!-- Bootstrap 4.3.1 -->
-  <link rel="stylesheet" href="css/hover-min.css"> <!-- Versión 2.3.2 -->
-  <link rel="stylesheet" href="css/animate.css"> <!-- Version - 3.7.2 -->
-  <link rel="stylesheet" href="css/style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Título de la página</title>
+
+    <link rel="stylesheet" href="libs/css/bootstrap.min.css">
+    <!-- Bootstrap 4.4.1 -->
+    <link rel="stylesheet" href="libs/css/hover-min.css">
+    <!-- Versión 2.3.2 -->
+    <link rel="stylesheet" href="libs/css/animate.css">
+    <!-- Version - 3.7.2 -->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
-  <h1>Hola Mundo</h1>
-  <h2>Plantilla Base 1.0</h2>
-  
-  <script src="js/jquery-3.3.1.slim.min.js"></script>
-  <script src="js/popper.min.js"></script> <!-- Versión 1.14.7 -->
-  <script src="js/bootstrap.min.js"></script> <!-- Versión 4.3.1 -->
-  <script src="js/bootstrapValidator.js"></script> <!-- Versión 0.5.0 -->
-  <script src="js/smooth-scroll.js"></script> 
-  <script src="js/waypoints.min.js"></script> <!-- Versión 2.0.5 -->
-  <script src="js/main.js"></script>
+    <h1>Hola Mundo</h1>
+    <h2>Plantilla Base 1.2</h2>
+
+    <!-- Versión 3.5.0 -->
+    <script src="libs/js/jquery-3.5.0.min.js"></script>
+    <!-- Versión 1.14.7 -->
+    <script src="libs/js/popper.min.js"></script>
+    <!-- Versión 4.4.1 -->
+    <script src="libs/js/bootstrap.min.js"></script>
+    <!-- Versión 0.5.0 -->
+    <script src="libs/js/bootstrapValidator.js"></script>
+    <script src="libs/js/smooth-scroll.js"></script>
+    <!-- Versión 2.0.5 -->
+    <script src="libs/js/waypoints.min.js"></script>
+
+    <!-- My scripts -->
+    <script src="libs/js/main.js"></script>
 
 </body>
+
 </html>
