--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Título de la página</title>
 
-    <link rel="stylesheet" href="libs/css/bootstrap.min.css">
+    <!-- normalize.css v8.0.1 -->
+    <link rel="stylesheet" href="libs/css/normalize.css">
     <!-- Bootstrap 4.4.1 -->
-    <link rel="stylesheet" href="libs/css/hover-min.css">
+    <link rel="stylesheet" href="libs/css/bootstrap.min.css">
     <!-- Versión 2.3.2 -->
-    <link rel="stylesheet" href="libs/css/animate.css">
+    <link rel="stylesheet" href="libs/css/hover-min.css">
     <!-- Version - 3.7.2 -->
+    <link rel="stylesheet" href="libs/css/animate.css">
+    <!-- My Styles -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
